--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   carousel_slider: ^5.0.0
   smooth_page_indicator: ^1.2.1
   expandable: ^5.0.1
+  easy_stepper: ^0.8.5+1
   
 
 dev_dependencies:
