--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   smooth_page_indicator: ^1.2.1
   expandable: ^5.0.1
   easy_stepper: ^0.8.5+1
+  local_auth: ^2.3.0
+  fluttertoast: ^8.2.12
   
 
 dev_dependencies:
