--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   easy_localization: ^3.0.7+1
   flutter_screenutil: ^5.9.3
   salomon_bottom_bar: ^3.3.2
-  flutter_bloc: ^9.1.0
+  flutter_bloc: ^9.1.1
   marquee: ^2.3.0
   carousel_slider: ^5.0.0
   smooth_page_indicator: ^1.2.1
@@ -46,6 +46,9 @@ dependencies:
   easy_stepper: ^0.8.5+1
   local_auth: ^2.3.0
   fluttertoast: ^8.2.12
+  dio: ^5.8.0+1
+  flutter_secure_storage: ^9.2.4
+  dio_cache_interceptor: ^4.0.3
   
 
   
