--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,11 @@ dependencies:
   dio: ^5.8.0+1
   flutter_secure_storage: ^9.2.4
   dio_cache_interceptor: ^4.0.3
+  encrypt: ^5.0.3
+  conditional_builder_null_safety: ^0.0.6
+  cached_network_image: ^3.4.1
+  skeletonizer: ^2.0.1
+
   
 
   
